updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an emerging web developer and programmer currently enrolled in the George Washington University Full Stack coding bootcamp.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Baltimore, Maryland</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy learning about computers and software developments, birdwatching, gaming, and reading.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to create elegant code that serves my community and enriches our online world.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Baltimore, Maryland</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I am thrilled by the creative and innovative potential of web development and the beauty of coding.</p>
     </section>
 
     <footer id="footer">
